# wsjtx-goose

./: CLAUDE.md  CMakeLists.txt  CMakeLists_wsjtx.txt  Configuration.cpp  Configuration.hpp  GB49-WSJTX-BLUEPRINT.md  Release_Notes.txt  revision_utils.cpp  revision_utils.hpp  wsjtx_config.h.in
.github/scripts/: audit-staged-dll-imports-windows.sh
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
Audio/: BWFFile.cpp
CMake/Modules/: NSIS.template.in
Transceiver/: HRDMessage.cpp  HRDMessage.hpp  HRDTransceiver.cpp  HRDTransceiver.hpp  OmniRigTransceiver.cpp
bundle_fixup/: CMakeLists.txt
doc/common/: links.adoc
doc/user_guide/en/: faq.adoc  install-from-source.adoc  install-windows.adoc  introduction.adoc  new_features.adoc  wsjtx-main.adoc
lib/: decoder.f90  jt9.f90  jt9a.f90  map65_mmdec.f90
lib/77bit/: packjt77.f90
lib/ft8var/: cwfilter.f90
map65/: CMakeLists.txt  devsetup.cpp  getdev.cpp  main.cpp  mainwindow.cpp  mainwindow.h  soundin.cpp
map65/libm65/: CMakeLists.txt  m65a.f90  npar_ptrs_mod.f90  q65b.F90  stdout_shared_memory.cpp
qmap/: CMakeLists.txt  main.cpp  mainwindow.cpp  runtime_paths.cpp
qmap/libqmap/: CMakeLists.txt  cacb_mod.f90  fftbig.f90  q65b.f90
tests/: CMakeLists.txt  test_bwf_file.cpp
tests/unit/hrd/: CMakeLists.txt  test_hrd_message.cpp
tests/unit/packjt77/: CMakeLists.txt  test_packjt77_hash_vectors.f90
widgets/: about.cpp  activeStations.cpp  displaytext.cpp  mainwindow.cpp  mainwindow.ui
